<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/arxiki"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.PopupOverlay"
            app:logo="@mipmap/ic_launcher" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/query_layout"
            android:layoutAnimation="@anim/rv_layout_animation" />


        <LinearLayout
            android:id="@+id/todo_list_empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:textAlignment="center">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_public_black_24dp" />I

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:text="@string/empty_view"
                android:textSize="@dimen/large_font_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/query_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:textAlignment="center">

            <EditText
                android:id="@+id/edit_query"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="4"
                android:fontFamily="@font/roboto"
                android:hint="@string/query"
                android:padding="@dimen/small_margin"
                android:textSize="@dimen/medium_font_size" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:padding="@dimen/small_margin"
                android:text="@string/search" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>