<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.details.DetailsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/detailscards_left_right"
        android:layout_marginRight="@dimen/detailscards_left_right"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:layout_marginTop="@dimen/small_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_movie_detail_poster"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                tools:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/text_movie_original_title"
                style="@android:style/TextAppearance.Large"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_movie_detail_poster"
                android:layout_toEndOf="@+id/image_movie_detail_poster"
                android:layout_toRightOf="@+id/image_movie_detail_poster"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="3"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                tools:text="Original movie title"/>

            <TextView
                android:id="@+id/text_movie_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/small_margin"
                android:layout_toEndOf="@+id/image_movie_detail_poster"
                android:layout_toRightOf="@+id/image_movie_detail_poster"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textSize="42sp"
                tools:text="10.0"/>

            <TextView
                android:id="@+id/text_movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/image_movie_detail_poster"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_toEndOf="@+id/image_movie_detail_poster"
                android:layout_toRightOf="@+id/image_movie_detail_poster"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                tools:text="Release date: 08.10.2015"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_movie_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/detailscards_left_right"
        android:layout_marginRight="@dimen/detailscards_left_right"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:layout_marginTop="@dimen/tiny_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin">

            <TextView
                android:id="@+id/text_movie_overview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_overview"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_movie_overview_title"
                android:paddingTop="@dimen/small_margin"
                tools:text="A plot synopsis (called overview in the api)"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_movie_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_movie_overview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginLeft="@dimen/detailscards_left_right"
        android:layout_marginRight="@dimen/detailscards_left_right"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/card_movie_videos_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin">

            <TextView
                android:id="@+id/text_videos_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_videos"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_videos_title"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_margin"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_movie_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_movie_videos"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/detailscards_left_right"
        android:layout_marginRight="@dimen/detailscards_left_right"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:layout_marginTop="@dimen/tiny_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin">

            <TextView
                android:id="@+id/text_reviews_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_reviews"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_reviews_title"
                android:paddingTop="@dimen/small_margin"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>